<resources>
    <string name="app_name">STUST</string>
    <string name="stust">STUST</string>
    <string name="Login_chs">用戶登入</string>
    <string name="Login_eng">LOG IN</string>
    <string name="About_chs">版本資訊</string>
    <string name="About_eng">ABOUT</string>
    <string name="Login_title_chs">登入</string>
    <string name="Login_title_eng">Log in</string>
    <string name="Username_hint_chs">學號/帳號</string>
    <string name="Password_hint_chs">密碼</string>
    <string name="Login_help_chs">新生無法登入?</string>
    <string name="About_title_chs">關於</string>
    <string name="Contact_title_chs">聯絡資訊</string>
    <string name="Version_title_chs"> 版本</string>
    <string name="Updated_title_chs">更新日期</string>
    <string name="Developer_title_chs">開發者</string>
    <string name="Title_Bar_chs">我的課表</string>
    <string name="Email">4a6g0048@stust.edu.tw</string>
    <string name="Developer">Kenait</string>
    <string name="Version">v 1.0.0</string>
    <string name="Updated">2020/09/22</string>
    <string name="MyCurriclum">我的課表</string>
    <string name="MyCourse">我的課程</string>
    <string name="MyNews">我的公告</string>
    <string name="MyMessage">我的通知</string>
    <string name="MyInfo">我的資訊</string>
    <string name="FailedMessage">請確認帳號與密碼</string>
    <string name="CourseLoading">課程載入中</string>
    <string name="CurriculumLoading">課表載入中</string>
    <string name="UserInfoLoading">資訊載入中</string>
    <string name="MessageLoading">通知載入中</string>
    <string name="BulletinLoading">公告載入中</string>
    <string name="ActivitesLoading">課程活動載入中</string>
    <string name="BulletinDetailLoading">公告資訊載入中</string>
    <string name="MessageDetailLoading">通知資訊載入中</string>
    <string name="MaterialLoading">課程教材載入中</string>
    <string name="AssignmentLoading">課程作業載入中</string>
    <string name="DetailInfoLoading">課程資訊載入中</string>
    <string name="DetailDialogLoading">資料載入中</string>
    <string name="AttachmentIntentFail">附件、連結頁面跳轉失敗</string>
    <string name="PermissionsDenied">"此功能需要儲存權限，請置「應用程式管理」啟用權限後重試。"</string>
    <string name="StartDownload">開始下載 </string>
    <string name="DownloadSuccessful"> 下載完成</string>
    <string name="DownloadFail">下載失敗</string>

</resources>